# mpcrust

./: Cargo.toml  Ecrans.ods  README.md  developpement
install/: packages.txt
src/: lib.rs  main.rs  mpc.rs  mpcscreen.rs  radio.rs  widgets.rs  window.rs
