[package]
name = "mpcrust"
version = "0.1.0"
authors = ["Florent Jugla <florent@jugla.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
mpd = "*"
# lazy_static = "1.4.0"
indextree = "*"
log = { version = "0.4", features = ["std", "serde"] }
simplelog = "^0.7.4"
rusqlite = "0.23.1"
xdg = "2.2.0"

serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.2.1"
serde_json = "1.0"
serde_yaml = "0.8.13"

reqwest = { version = "0.10", features = ["blocking", "json"] }

[dev-dependencies]
failure = "0.1"
